<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/feedback_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/title_feedback"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/feedback_ratingContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/feedback_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ratings"
            android:textSize="18sp" />

        <RatingBar
            android:id="@+id/feedback_ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="25dp"
            android:numStars="5"
            android:rating="4"
            android:stepSize="1.0" />
    </LinearLayout>

    <TextView
        android:id="@+id/feedback_cookingNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="8dp"
        android:text="@string/feedback_cookingNotes_title"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/feedback_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/feedback_notes_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <CheckBox
        android:id="@+id/feedback_communityCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_community"
        android:layout_marginTop="15dp"
        android:layout_gravity="start"/>

    <Button
        android:id="@+id/feedback_submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:layout_gravity="end"/>

</LinearLayout>