<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/home_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/title_home"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/home_imageContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/home_firstImage"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:id="@+id/home_secondImage"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:id="@+id/home_thirdImage"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/app_name" />

    </LinearLayout>

    <TextView
        android:id="@+id/home_introduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/home_introduction"
        tools:ignore="VisualLintLongText" />

    <TextView
        android:id="@+id/home_tipsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/home_tipsTitle" />


    <TextView
        android:id="@+id/home_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textAlignment="viewStart"
        android:text="@string/home_tips" />

</LinearLayout>