<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Timer"
    android:orientation="vertical">

    <TextView
        android:id="@+id/timer_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:text="" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <SeekBar
            android:id="@+id/timer_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:enabled="false" />

        <!-- Labels -->
        <TextView
            android:id="@+id/label_preparation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preparation"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/label_cooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cooking"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/label_resting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resting"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <TextView
        android:id="@+id/timer_remaining_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="70sp"
        android:textStyle="bold"
        android:text="@string/baseTime" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">

        <Button
            android:id="@+id/timer_startBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/start"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

        <Button
            android:id="@+id/timer_pauseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/pause"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

        <Button
            android:id="@+id/timer_restartBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/re_start"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/timer_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="0"
        android:layout_gravity="center"/>

</LinearLayout>